--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
                 <div class="book-header" role="navigation">
                     <!-- Title -->
                     <h1>
-                        <i class="fa fa-circle-o-notch fa-spin"></i>
+                        <i class="fa fa-circle-o-notch fa-spin"></i>여기
                         {% if page.title %}
                             <a href="." >{{ page.title | escape }}</a>
                         {% else %}
