--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@
                             <a href="." >{{ page.title | escape }}</a>
                         {% else %}
                             <a href="." >{{ site.title | escape }}</a>
-                        {% endif %}
+                        {% endif %}여기여기
                     </h1>
                 </div>
 
