--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,13 +13,13 @@
     <body>
         <div class="book">
 
-            {%- include toc-date.html -%}
+            {%- include toc-date.html -%}다시
 
             <div class="book-body">
                 <div class="book-header" role="navigation">
                     <!-- Title -->
                     <h1>
-                        <i class="fa fa-circle-o-notch fa-spin"></i>여기
+                        <i class="fa fa-circle-o-notch fa-spin"></i>
                         {% if page.title %}
                             <a href="." >{{ page.title | escape }}</a>
                         {% else %}
