--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -78,7 +78,7 @@
                         {% endfor %}
 
                         {% if reversed_posts.size > 0 %}
-                            <li class="divider">포스트와 페이지 사이쯤</li>
+                            <li class="divider"></li>
                         {% endif %}
                     {% endif %}
                 {% endfor %}
@@ -115,6 +115,6 @@
                     {% endif %}
                 {% endfor %}
             {% endif %}
-        </ul>
+        </ul>포스트와 페이지 사이쯤
     </nav>
 </div>
