--- a/_includes/body.html
+++ b/_includes/body.html
@@ -13,7 +13,7 @@
             <div class="search-noresults">
                 <section class="normal markdown-section">
                     {% if page.title %}
-                        <h1 id="{{ page.id }}">{{ page.title | escape }}페이지 제목은 body에 </h1>
+                        <h1 id="{{ page.id }}">{{ page.title | escape }}</h1>
                     {% else %}
                         <h1 id="{{ page.id }}">{{ site.title | escape }}</h1>
                     {% endif %}
