--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -24,12 +24,14 @@
     </script>
 
     <nav role="navigation">
+        <!-- 검색창 숨기기 테스트
         <div id="book-search-input" role="search">
             <input type="text" placeholder="Type to 검색" />
         </div>
         <div id="book-search-input-link" role="search">
             <a href="{{site.baseurl}}/assets/search.html">Click to Search</a>
         </div>
+        -->
         <ul class="summary">
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
