--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -24,7 +24,7 @@
     </script>
 
     <nav role="navigation">
-        <!-- 검색창 숨기기 테스트
+        <!-- 검색창 숨기기 테스트 
         <div id="book-search-input" role="search">
             <input type="text" placeholder="Type to 검색" />
         </div>
@@ -39,7 +39,7 @@
             <li class="chapter" data-level="1.1" data-path="{{site.baseurl}}">
             {% endif %}
                 <a href="{{site.baseurl}}/" onclick="pageScrollToTop(this)">
-                    {{ site.title | escape }} 타이틀 여기
+                    {{ site.title | escape }}
                 </a>
                 {% if site.toc.enabled %}
                     {% if site.toc.enabled_index %}
