--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -32,6 +32,10 @@
             <a href="{{site.baseurl}}/assets/search.html">Click to Search</a>
         </div>
         -->
+        <!-- 이미지 테스트
+        <link rel="icon" type="image/png" href="{{ site.baseurl }}/asset/twilight_years_top.png" sizes="192x192">
+        -->
+        <link rel="icon" type="image/png" href="{{ site.baseurl }}/asset/twilight_years_top.png">
         <ul class="summary">
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
