--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -35,7 +35,8 @@
         <!-- 이미지 테스트
         <link rel="icon" type="image/png" href="{{ site.baseurl }}/asset/twilight_years_top.png" sizes="192x192">
         -->
-        <img src="{{ site.baseurl }}/asset/twilight_years_top.png">
+        <img src="{{ site.baseurl }}/assets/twilight_years_top.png">
+        <img src="https://pclnxt.github.io/assets/twilight_years_top.png">
         <ul class="summary">
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
