--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -36,9 +36,8 @@
         <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/twilight_years_top.png" sizes="192x192" >
         <img src="{{ site.baseurl }}/assets/twilight_years_top.png">
         <img src="https://pclnxt.github.io/assets/twilight_years_top.png">
-        -->
-        <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/twilight_years_top.png" width="100%">
-        
+        -->        
+        <img src="{{ site.baseurl }}/assets/twilight_years_top.png" width="100%">
         <ul class="summary">
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
